--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: nginx:latest
+          image: mohammedxo51/webapp:webapp
           ports:
             - containerPort: 8080
